# dataclassparse

./: .gitignore  README.md  pyproject.toml
src/dataclassparse_txetx/: __init__.py  dataclassparse.py
src/dataclassparse_txetx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
